Fixed center alignment issue with #image div that occured at around 1440px width

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -166,6 +166,8 @@
     
     #img-div {
         grid-area: 4 / 1 / 8 / 5;
+        display: flex;
+        flex-direction: column;
     }
     
     #img-caption {
